--- a/style.css
+++ b/style.css
@@ -7,6 +7,12 @@
     --success-color: #27ae60;
 }
 
+html, body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -21,9 +27,16 @@ body {
 }
 
 .container {
+    display: flex;
+    flex-direction: column;
     max-width: 600px;
     margin: 0 auto;
     padding: 20px;
+    min-height: 100vh;
+}
+
+.container div#linksContainer {
+    flex: 1;
 }
 
 header {
