--- a/style.css
+++ b/style.css
@@ -35,6 +35,10 @@ body {
     min-height: 100vh;
 }
 
+.container div#linksContainer {
+    flex: 1;
+}
+
 header {
     text-align: center;
     margin-bottom: 30px;
